# cansat-gcs

./: .gitmodules  git-filter-repo.txt
doc/: topics.md
src/: broker-test-1.kitty-session  broker-test-1.tmux-session.sh  broker-test-tlm-converter.sh  broker-test-tlm-converter.tmux-session.sh  broker-test-tun-graip.tmux-session.sh  broker-test-tun-laptop.tmux-session.sh  broker-test-tun.kitty-session  broker-test-tun.tmux-session.sh
src/laptop/StrelA-MS/: StrelA_MS_PL.bat  requirements.txt
src/laptop/StrelA-MS/config_templates/: StrelA_MS_ATLAS.yaml  StrelA_MS_MONOLIT.yaml  StrelA_MS_SINS.yaml
src/laptop/StrelA-MS/source/: data_control.py  model_widget.py  source.py
src/laptop/StrelA-MS/source/models/: the-sun.stl
src/laptop/Ukaz/: Ukaz.yaml
src/laptop/Ukaz/source/: command_interface.py  status_widget.py
src/laptop/its-kml-translator/: requirements.txt
src/laptop/its-kml-translator/its_kml_translator/: __main__.py  dataset.py
src/laptop/trajectory/: trajectory.py
src/rpi/: .gitignore  ccsds-link-gen-eclipse.sh  tele_blink.py
src/rpi/_cmake-projects/: generate.sh
src/rpi/_cmake-projects/make_all/: CMakeLists.txt
src/rpi/_cmake-projects/server_radio/: CMakeLists.txt
src/rpi/ccsds-link/: CMakeLists.txt
src/rpi/ccsds-link/server-radio/: CMakeLists.txt
src/rpi/ccsds-link/server-radio/src/: server-zmq.c
src/rpi/ccsds-link/server-tun/: CMakeLists.txt
src/rpi/ccsds-link/server-tun/src/: log.hpp  main.cpp  tun_device.cpp  tun_device.hpp  zmq_server.cpp  zmq_server.hpp
src/rpi/ccsds-link/server-uslp/: CMakeLists.txt
src/rpi/ccsds-link/server-uslp/src/: bus_io.cpp  bus_io.hpp  bus_messages.cpp  bus_messages.hpp  dispatcher.cpp  dispatcher.hpp  main.cpp  stack.cpp  stack.hpp
src/rpi/server-radio/src/: server-config.c  server-zmq.c  server.c  sx126x_board_rpi.c
src/rpi/server-tun/: CMakeLists.txt
src/rpi/server-tun/src/: log.cpp  log.hpp  main.cpp  tun_device.cpp  zmq_server.cpp  zmq_server.hpp
src/rpi/server-uslp/: CMakeLists.txt
src/rpi/server-uslp/src/: bus_io.cpp  bus_io.hpp  bus_messages.cpp  bus_messages.hpp  dispatcher.cpp  dispatcher.hpp  log.cpp  log.hpp  main.cpp  stack.cpp  stack.hpp
src/sdr/: lora_receive_realtime-its.grc  lora_receive_realtime.py
src/zmq/: .gitignore  broker.py  broker_mav_monitor.py  broker_series_monitor.py  imitator_radio.py  its_logfile_concat.py  its_logfile_mav_to_uplink_sdu.py  make_csv.py  make_mavlog.py  make_mdt.py  make_uplink_chronology.py  send_pa_power_request.py  send_uplink_frame_sequence.py  send_uplink_sdu_request.py  send_uplink_udp_packet.py  senders_common.py
src/zmq/ccsds/: epp.py
